--- a/src/styles/container/Container.module.scss
+++ b/src/styles/container/Container.module.scss
@@ -5,12 +5,12 @@
     margin: 10px 20px;
     justify-content: space-between;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 70px;
 
     @media screen and (max-width: 900px) and (min-width: 700px) {
         width: 100%;
         justify-content: space-evenly;
-       
+        
     }
 
     @media screen and (max-width: 1100px) and (min-width: 900px) {
@@ -24,6 +24,18 @@
     }
     @media screen and (max-width: 1600px) {
         margin-top: 10px;
+    }
+    @media screen and (max-width: 375px) {
+        margin: 0;
+    }
+    @media screen and (max-width: 430px) {
+        margin: 0;
+    }
+    @media screen and (max-width: 768px) {
+        margin: 0;
+    }
+    @media screen and (max-width: 820px) {
+        margin: 0;
     }
     align-items: center;
     justify-content: space-between;
@@ -176,7 +188,7 @@
     margin-top: 50px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     @media screen and (max-width: 1600px) {
         margin-top: 20px;
@@ -197,5 +209,8 @@
 
 .headerlogo{
     width: 40px;
-    margin-bottom: 20px;
+    margin: 20px;
+    @media screen and (max-width: 768px) {
+        margin: 30px;
+    }
 }
