--- a/src/styles/container/Container.module.scss
+++ b/src/styles/container/Container.module.scss
@@ -37,6 +37,9 @@
     @media screen and (max-width: 820px) {
         margin: 0;
     }
+    @media screen and (max-width: 1024px) {
+        margin: 0;
+    }
     align-items: center;
     justify-content: space-between;
 
@@ -54,13 +57,26 @@
             margin-bottom: 10px;
         }
 
+        @media screen and (max-width: 820px) {
+            margin-top: 3.25rem;
+        }
+        @media screen and (max-width: 1024px) {
+            margin-top: 3.25rem;
+        }
+
         img {
             height: 80px;
             margin-right: 0.5rem;
-
+            
             @media screen and (max-width: 640px) {
                 margin-bottom: 10px;
                 margin-top: 10px;
+            }
+            @media screen and (max-width: 820px) {
+                height: 100px;
+            }
+            @media screen and (max-width: 1024px) {
+                height: 100px;
             }
         }
 
