--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -1,6 +1,6 @@
 .App {
     height: 100vh;
-    display: flex;
+    // display: flex;
     @media screen and (max-width: 1600px) {
         flex-direction: column;
     }
