--- a/src/styles/StakingContainer.css
+++ b/src/styles/StakingContainer.css
@@ -83,7 +83,7 @@
     align-items: center;
     border-radius: 10px;
     padding-top: 10px 10px 30px 10px;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
@@ -274,9 +274,10 @@
     height: max-content;
     display: flex;
     flex-direction: column;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
     border-radius: 70px;
-    margin: 60px 20px;
+    /* margin: 60px 20px; */
+    margin-bottom: 0;
 }
 
 
@@ -433,7 +434,9 @@ input[type=number] {
 .StakingBoxs{
     margin-left: 10px;
     margin-right: 10px;
-    background: linear-gradient(rgba(0, 173, 230, 0.098), rgb(11, 12, 17) 70%);
+    /* background: linear-gradient(rgba(0, 173, 230, 0.098), rgb(11, 12, 17) 70%); */
+    background-color: #202a3e;
+    transition: .5s cubic-bezier(.17,.17,.24,1);
     /* border: 1px solid transparent; */
     border-radius: 40px;
     padding-bottom: 20px;
@@ -446,6 +449,7 @@ input[type=number] {
 }
 
 .StakingBoxs:hover{
+    background-color: #202a3e85;
     border: 1px solid #3370ff;
 }
 
@@ -471,7 +475,13 @@ input[type=number] {
 .TabContainer {
     border: 1px solid rgb(229 229 229 / 10%);
     border-radius: 1rem;
-    background: linear-gradient(rgba(0, 173, 230, 0.098), rgb(11, 12, 17) 70%);
+    /* background: linear-gradient(rgba(0, 173, 230, 0.098), rgb(11, 12, 17) 70%); */
+    background-color: #202a3e;
+    transition: .5s cubic-bezier(.17,.17,.24,1);
+}
+
+.TabContainer:hover {
+    background-color: #202a3e85;
 }
 
 .TabList {
