--- a/src/styles/container/Container.module.scss
+++ b/src/styles/container/Container.module.scss
@@ -4,8 +4,11 @@
     height: fit-content;
     margin: 10px 20px;
     justify-content: space-between;
-    flex-direction: column;
-    margin-top: 50px;
+    flex-direction: row;
+    // margin-top: 50px;
+    @media screen and (max-width: 1440px) {
+        flex-direction: column;
+    }
 
     @media screen and (max-width: 900px) and (min-width: 700px) {
         width: 100%;
@@ -44,13 +47,13 @@
     justify-content: space-between;
 
     .BalanceSection {
-        flex-direction: column;
+        flex-direction: row;
         display: flex;
         align-items: center;
         padding: 6px 6px;
-        border-radius: 13px;
-        margin-top: 0.25rem;
-        margin-bottom: 30px;
+        // border-radius: 13px;
+        // margin-top: 0.25rem;
+        // margin-bottom: 30px;
 
         @media screen and (max-width: 700px) {
             flex-direction: column;
@@ -65,7 +68,7 @@
         }
 
         img {
-            height: 80px;
+            height: 50px;
             margin-right: 0.5rem;
             
             @media screen and (max-width: 640px) {
@@ -123,6 +126,20 @@
         flex-direction: column;
         width: 100%;
     }
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.content {
+    padding: 16px;
+}
+
+.sticky + .content {
+    padding-top: 102px;
 }
 
 
@@ -201,7 +218,7 @@
 
 
 .HeaderContent {
-    margin-top: 50px;
+    // margin-top: 50px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -217,7 +234,7 @@
 }
 
 .connectButtonBox{
-    margin-top: 90%;
+    // margin-top: 90%;
     @media screen and (max-width: 1600px) {
         margin-top: 0px;
     }
