--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@
 body {
     font-family: Gilroy-medium;
     font-style: normal;
-    /* background-color: #161616; */
-    background-image: url(./icons/background.png);
+    background: #081336;
+    /* background-image: url(./icons/background.png); */
     background-repeat: no-repeat;
     height: 100%;
     background-size: cover;
