--- a/src/styles/container/Container.module.scss
+++ b/src/styles/container/Container.module.scss
@@ -51,6 +51,7 @@
         display: flex;
         align-items: center;
         padding: 6px 6px;
+        width: 180px;
         // border-radius: 13px;
         // margin-top: 0.25rem;
         // margin-bottom: 30px;
@@ -119,6 +120,10 @@
 
 .HeaderBox {
     background: transparent;
+    position: fixed;
+    width: 100%;
+    z-index: 110000;
+    opacity: 1;
 
     @media screen and (max-width: 1600px) {
         height: min-content;
