--- a/src/styles/container/Container.module.scss
+++ b/src/styles/container/Container.module.scss
@@ -2,13 +2,13 @@
     display: flex;
     width: -webkit-fill-available;
     height: fit-content;
-    margin: 10px 20px;
+    // margin: 10px 10px 10px 10px;
     justify-content: space-between;
     flex-direction: row;
     // margin-top: 50px;
-    @media screen and (max-width: 1440px) {
-        flex-direction: column;
-    }
+    // @media screen and (max-width: 1440px) {
+    //     flex-direction: column;
+    // }
 
     @media screen and (max-width: 900px) and (min-width: 700px) {
         width: 100%;
@@ -35,13 +35,17 @@
         margin: 0;
     }
     @media screen and (max-width: 768px) {
-        margin: 0;
+        // margin: 0;
+        margin-top: 30px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     @media screen and (max-width: 820px) {
-        margin: 0;
+        // margin: 0;
     }
     @media screen and (max-width: 1024px) {
-        margin: 0;
+        // margin: 0;
     }
     align-items: center;
     justify-content: space-between;
@@ -55,18 +59,21 @@
         // border-radius: 13px;
         // margin-top: 0.25rem;
         // margin-bottom: 30px;
+        @media screen and (max-width: 430px) {
+            margin-top: 10px !important;
+        }
 
-        @media screen and (max-width: 700px) {
+        @media screen and (max-width: 768px) {
             flex-direction: column;
             margin-bottom: 10px;
         }
 
-        @media screen and (max-width: 820px) {
-            margin-top: 3.25rem;
-        }
-        @media screen and (max-width: 1024px) {
-            margin-top: 3.25rem;
-        }
+        // @media screen and (max-width: 820px) {
+        //     margin-top: 3.25rem;
+        // }
+        // @media screen and (max-width: 1024px) {
+        //     margin-top: 3.25rem;
+        // }
 
         img {
             height: 50px;
@@ -80,7 +87,7 @@
                 height: 100px;
             }
             @media screen and (max-width: 1024px) {
-                height: 100px;
+                height: 50px;
             }
         }
 
@@ -122,15 +129,18 @@
     background: transparent;
     position: fixed;
     width: 100%;
-    z-index: 110000;
+    z-index: 10;
     opacity: 1;
 
     @media screen and (max-width: 1600px) {
         height: min-content;
         display: flex;
         flex-direction: column;
-        width: 100%;
+        // width: 100%;
     }
+    // @media screen and (max-width: 430px) {
+    //     width: 48%;
+    // }
 }
 
 .sticky {
@@ -229,7 +239,7 @@
     justify-content: center;
     align-items: center;
     @media screen and (max-width: 1600px) {
-        margin-top: 20px;
+        // margin-top: 20px;
     }
 }
 
@@ -249,6 +259,6 @@
     width: 40px;
     margin: 20px;
     @media screen and (max-width: 768px) {
-        margin: 30px;
+        margin: 10px;
     }
 }
